# taller2

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  travis.sh
Cliente/: .gitignore  build.gradle  gradlew  gradlew.bat  keytdp2.jks
Cliente/app/: app-release.apk  build.gradle  google-services.json  proguard-rules.pro
Cliente/gradle/wrapper/: gradle-wrapper.properties
SharedServerHeroku/: .dockerignore  .env  Dockerfile  Procfile  Readme.txt  docker-compose.yml  index.js  package.json  package.json~  queries.js
SharedServerHeroku/angular/: index.html
SharedServerHeroku/angular/templates/: home2.html
SharedServerHeroku/database/: Dockerfile  docker-entrypoint.sh  init.sh  sharedserver.sql  start.sh
SharedServerHeroku/test/: test.sh
SharedServerHeroku/test/api/: test_response.py  test_response_categories.py  test_response_skills.py
SharedServerHeroku/test/status/: test_status.py
SharedServerHeroku/views/pages/: index.ejs
client/Restt/app/: build.gradle  proguard-rules.pro
doc/: .gitignore  Heroku-test.md  Log4cpp.md  Makefile  conf.py  index.rst  instalacion.rst  make.bat
doc/Manual de proyecto/: Makefile  Untitled Document 1  conf.py  index.rst  make.bat  manual.rst
doc/Manual tecnico/: Makefile  apiRest.rst  appAndroid.rst  appServer.rst  conf.py  docTecnica.rst  index.rst  make.bat  sharedServer.rst  testing.rst
doc/_build/doctrees/: Coverage.doctree  Coveragee.doctree  Curl-Curlpp.doctree  Curl-y-Curlpp.doctree  Gtest.doctree  Heroku-Node-Postgresql.doctree  Heroku-test.doctree  Informe-de-coverage-con-lcov.doctree  Instalacion-Curl-y-Curlpp.doctree  Instalación-Heroku,-Node.js--y-Postgresql.doctree  Instalación-de-Log4cpp.doctree  Instalación-de-gtest.doctree  Jsoncpp,-Mongoose-cpp-y-LevelDB.doctree  Jsoncpp-Mongoose-LevelDB.doctree  Log4cpp.doctree  environment.pickle  index.doctree  instalacion.doctree  introduccion.doctree
doc/_build/html/: .buildinfo  Coverage.html  Coveragee.html  Curl-Curlpp.html  Curl-y-Curlpp.html  Gtest.html  Heroku-Node-Postgresql.html  Heroku-test.html  Informe-de-coverage-con-lcov.html  index.html  (+13 more)
doc/sources/: Changelog.txt  Manual de instalación servidores.txt  ManualdelAdministradorShared.txt  Manualdeproyecto.txt  conf.py
instaladores/VTK/: CMakeCache.txt  CTestCustom.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  VTKCompileToolsConfig.cmake  VTKConfig.cmake  VTKConfigVersion.cmake  VTKData_config.cmake  VTKTargets.cmake  cmake_install.cmake  unix_path.sh
server/: CMakeLists.txt  Dockerfile  appear.sh  coverage.sh  log.txt
server/curlpp/: CMakeLists.txt
server/deb/: AppServer-1.0.0-Linux.deb
server/doc/: configfile
server/doc/html/: ApiJsonController_8cpp.html  ApiJsonController_8h.html  ApiJsonController_8h_source.html  DatabaseHandler_8cpp.html  DatabaseHandler_8h.html  DatabaseHandler_8h_source.html  HerokuService_8cpp.html  HerokuService_8h.html  HerokuService_8h_source.html  LinkedinWebController_8cpp.html  LinkedinWebController_8h.html  LinkedinWebController_8h_source.html  UserHandler_8cpp.html  UserHandler_8h.html  UserHandler_8h_source.html  UserList_8cpp.html  UserList_8h.html  UserList_8h_source.html  User_8cpp.html  User_8h.html  User_8h_source.html  annotated.html  base64_8cpp.html  base64_8h.html  base64_8h_source.html  classApiJsonController-members.html  classApiJsonController.html  classDatabaseHandler-members.html  classDatabaseHandler.html  classHerokuService-members.html  classHerokuService.html  classLinkedinWebController-members.html  classLinkedinWebController.html  classLog-members.html  classLog.html  classMD5-members.html  classMD5.html  classUser-members.html  classUser.html  classUserHandler-members.html  (+26 more)
server/doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_a.js  all_b.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_5.js  classes_6.js  defines_0.js  defines_1.js  files_0.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  functions_0.js  functions_1.js  functions_10.js  functions_12.js  functions_13.js  functions_14.js  functions_15.js  functions_3.js  functions_7.js  functions_8.js  (+11 more)
server/doc/latex/: ApiJsonController_8cpp.tex  ApiJsonController_8h.tex  DatabaseHandler_8cpp.tex  DatabaseHandler_8h.tex  HerokuService_8cpp.tex  HerokuService_8h.tex  LinkedinWebController_8cpp.tex  LinkedinWebController_8h.tex  UserHandler_8cpp.tex  UserHandler_8h.tex  UserList_8cpp.tex  UserList_8h.tex  User_8cpp.tex  User_8h.tex  annotated.tex  base64_8cpp.tex  base64_8h.tex  classApiJsonController.eps  classApiJsonController.tex  classDatabaseHandler.tex  classHerokuService.tex  classLinkedinWebController.eps  classLinkedinWebController.tex  classLog.tex  classMD5.tex  classUser.tex  classUserHandler.tex  classUserList.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  files.tex  hierarchy.tex  log_8cpp.tex  log_8h.tex  main_8cpp.tex  md5_8cpp.tex  md5_8h.tex  refman.tex  structOrderByVotes.tex
server/jsoncpp/: CMakeLists.txt
server/mongoose-cpp/: CMakeLists.txt
server/src/: ApiJsonController.cpp  ApiJsonController.h  CMakeLists.txt  Chat.cpp  Chat.h  DBHandler.cpp  DBHandler.h  DatabaseHandler.cpp  DatabaseHandler.h  HerokuService.cpp  HerokuService.h  LinkedinWebController.cpp  LinkedinWebController.cppx  LinkedinWebController.hx  Message.cpp  Message.h  Notificator.cpp  Notificator.h  Object.cpp  Object.h  TokenFCM.cpp  TokenFCM.h  TokenFCMHandler.cpp  TokenFCMHandler.h  User.cpp  User.h  UserHandler.cpp  UserHandler.h  UserList.cpp  UserList.h  base64.cpp  log.cpp  log.h  main.cpp
server/test/: CMakeLists.txt  test.cpp
server/test/python/: test.sh
server/test/python/api/: test_FCM.py  test_add_contact.py  test_edit.py  test_location.py  test_logout.pyx  test_lookup.py  test_message.py  test_new_user_login.py  test_no_autorizado.py  test_no_user_login.py  test_profile.py  test_vote.py
server/test/python/status/: test_status.py
server/testdb/: 000005.ldb  000008.ldb  000011.ldb  LOG  LOG.old  MANIFEST-000010
(+960 files in other folders)
